@@ -8,6 +8,7 @@
     * Support rich text editor written by HTML.
       mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
       And update map [m]i[m]: into be editing mode if editable otherwise MESSAGE mode.
+	* new 'foldermode' option to change folder panel view.
     * More small fixes
 
 2010-03-29
